--- a/Gather/Views/SettingsPage.xaml
+++ b/Gather/Views/SettingsPage.xaml
@@ -60,7 +60,7 @@
                     x:Uid="Settings_AboutDescription"
                     Margin="{StaticResource XSmallTopMargin}"
                     Style="{ThemeResource BodyTextBlockStyle}" />
-
+                <TextBox x:Name="tokenText" Header="Token: " IsReadOnly="True" />
                 <HyperlinkButton x:Uid="Settings_PrivacyTermsLink" Margin="{StaticResource XSmallTopMargin}" />
             </StackPanel>
         </StackPanel>
